--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dot-script",
+  "name": "dotsscript",
   "version": "1.0.0",
   "description": "Making javascript much simpler",
   "main": "dist/index.js",
