--- a/.github/workflows/publish-node-package.yaml
+++ b/.github/workflows/publish-node-package.yaml
@@ -25,3 +25,5 @@ jobs:
       - name: Publish node packages
         run: |
           npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
